--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,77 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Timestamp Microservice</title>
+	 <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-	<h1>Hello World!</h1>
+	<nav class='orange darken-3'>
+	    <div class="nav-wrapper">
+	      <a href="/" class="brand-logo">Timestamp Microservice(<small>Freecodecamp Project</small>)</a>
+	      <ul class="right hide-on-med-and-down">
+	      <li><a href="sass.html"><i class="fa fa-github left"></i>View Source Code</a></li>
+	      </ul>
+	    </div>
+	</nav>
+    <main class="container">
+    	<h3>API Basejump: Timestamp microservice</h1>
+    	<h4>User stories:</h4>
+    	<blockquote>
+    		I can pass a string as a parameter, and it will check to see whether that string contains either a unix timestamp or a natural language date (example: January 1, 2016)
+    	</blockquote>
+    	<blockquote>
+    		If it does, it returns both the Unix timestamp and the natural language form of that date.
+    	</blockquote>
+    	<blockquote>
+    		If it does not contain a date or Unix timestamp, it returns null for those properties.
+    	</blockquote>
+    	<div class="row">
+    		<div class="col s12 m6">
+    			<div class="card">
+    				<div class="card-content">
+    					<span class="card-title">Example Usage:</span>
+    					<p id="natural-link">
+    						<!-- main.js adds natural link url here -->
+    					</p>
+    					<p id='unix-link'>
+    						<!-- main.js adds unix link url here -->
+    					</p>
+    				</div>
+    				<div id="try-it" class="card-action">
+						<!-- main.js adds links here -->
+    				</div>
+    			</div>
+    		</div>
+    		<div class="col s12 m6">
+    			<div class="card">
+    				<div class="card-content">
+    					<span class="card-title">Example Output:</span>    						
+<pre>
+{
+unix: 1450117800,
+natural: "December 15, 2015"
+}
+</pre>
+    				</div>
+    			</div>
+    		</div>
+    	</div>
+    </main>
+	<div class="page-footer">
+		<div class="footer-copyright text-center">
+            <div class="container">
+             Made with <i class="fa fa-heart-o"></i> By VinayPuppal © 2016
+            </div>
+          </div>
+	</div>
+	
+	<!-- Compiled and minified JavaScript -->
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-rc1/jquery.min.js'></script>
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+  	<script src='js/main.js'></script>
 </body>
 </html>
