meta tags and github url in navbar

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Timestamp Microservice</title>
+	<meta description="API Basejump: Timestamp Microservice(Freecodecamp Project)">
+	<!-- FACEBOOK -->
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Timestamp Microservice(Freecodecamp Project)">
+	<meta property="og:url" content="https://vp-timestamp.herokuapp.com">
+	<meta property="og:image" content="https://res.cloudinary.com/vinaypuppal/image/upload/c_scale,w_1024/v1465061495/fcc/timestamp-ui.png">
+	<meta property="og:site_name" content="Timestamp Microservice">
+	<meta property="og:description" content="API Basejump: Timestamp Microservice(Freecodecamp Project)">
+	<!-- TWITTER -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@vinaypuppal">
+	<meta name="twitter:title" content="Timestamp Microservice(Freecodecamp Project)">
+	<meta name="twitter:description" content="API Basejump: Timestamp Microservice(Freecodecamp Project)">
+	<meta name="twitter:image:src" content="https://res.cloudinary.com/vinaypuppal/image/upload/c_scale,w_1024/v1465061495/fcc/timestamp-ui.png">
+	<!-- mobile viewport -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
 	 <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -15,7 +31,7 @@
 	    <div class="nav-wrapper">
 	      <a href="/" class="brand-logo">Timestamp Microservice(<small>Freecodecamp Project</small>)</a>
 	      <ul class="right hide-on-med-and-down">
-	      <li><a href="sass.html"><i class="fa fa-github left"></i>View Source Code</a></li>
+	      <li><a href="https://github.com/vinaypuppal/timestamp-microservice" target="_blank"><i class="fa fa-github left"></i>View Source Code</a></li>
 	      </ul>
 	    </div>
 	</nav>
@@ -66,7 +82,7 @@ natural: "December 15, 2015"
 	<div class="page-footer">
 		<div class="footer-copyright text-center">
             <div class="container">
-             Made with <i class="fa fa-heart-o"></i> By VinayPuppal © 2016
+             Made with <i class="fa fa-heart-o"></i> By <a href="https://vinaypuppal.com" target="_blank">VinayPuppal</a> © 2016
             </div>
           </div>
 	</div>
